[package]
name = "webex"
version = "0.7.1"
authors = [
    "Scott Hutton <shutton@pobox.com>",
    "Milan Stastny <milan@stastnej.ch>",
    "Abel Shields <abel@uucp.org.uk>",
]
edition = "2018"
description = "Interface to Webex Teams REST and WebSocket APIs"
keywords = ["webex", "spark"]
categories = ["asynchronous"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shutton/webex-rust.git"

[dependencies]
async-std = "1.9"
base64 = "0.21.0"
error-chain = "0.12.2"
futures = "0.3.16"
futures-util = "0.3.16"
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = "0.5"
log = "0.4"
serde_json = "1.0"
tokio-native-tls = "0.3"
tungstenite = "0.19.0"
url = "2.2"
lazy_static = "1.4.0"
serde_urlencoded = "0.7.1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0.127"
features = ["derive"]

[dependencies.tokio]
version = "1.10"
features = ["full"]

[dependencies.tokio-tungstenite]
version = "0.18.0"
features = ["connect", "native-tls"]

[dependencies.uuid]
version = "1.1"
features = ["v4"]

[dev-dependencies]
env_logger = "0.10.0"
