[package]
name = "webex"
version = "0.9.3"
authors = [
    "Scott Hutton <shutton@pobox.com>",
    "Milan Stastny <milan@stastnej.ch>",
    "Abel Shields <abel@uucp.org.uk>",
]
edition = "2021"
description = "Interface to Webex Teams REST and WebSocket APIs"
keywords = ["webex", "spark"]
categories = ["asynchronous"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wr-org/webex-rust"

[dependencies]
async-std = "1.12"
base64 = "0.21.7"
futures = "0.3.30"
futures-util = "0.3.30"
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = "0.5"
log = "0.4"
serde_json = "1.0"
tokio-native-tls = "0.3"
tungstenite = "0.20.1"
url = "2.5"
lazy_static = "1.5.0"
serde_html_form = "0.2.6"
serde_with = { version = "3.9.0", features = ["macros"] }
thiserror = "1.0.63"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0.207"
features = ["derive"]

[dependencies.tokio]
version = "1.39"
features = ["full"]

[dependencies.tokio-tungstenite]
version = "0.20.1"
features = ["connect", "native-tls"]

[dependencies.uuid]
version = "1.10"
features = ["v4"]

[dev-dependencies]
env_logger = "0.10.2"
