[package]
name = "webex"
version = "0.9.4"
authors = [
  "Scott Hutton <shutton@pobox.com>",
  "Milan Stastny <milan@stastnej.ch>",
  "Abel Shields <abel@uucp.org.uk>",
]
edition = "2021"
description = "Interface to Webex Teams REST and WebSocket APIs"
keywords = ["webex", "spark"]
categories = ["asynchronous"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wr-org/webex-rust"

[dependencies]
async-std = "1.12"
base64 = "0.22.1"
futures = "0.3.30"
futures-util = "0.3.30"
hyper = { version = "1.4", features = ["client", "http1"] }
hyper-tls = "0.6"
log = "0.4"
serde_json = "1.0"
tokio-native-tls = "0.3"
tungstenite = "0.23.0"
url = "2.5"
lazy_static = "1.5.0"
serde_html_form = "0.2.6"
serde_with = { version = "3.9.0", features = ["macros"] }
thiserror = "1.0.63"
hyper-util = { version = "0.1.7", features = ["client", "http1"] }
http-body-util = "0.1.2"
reqwest = { version = "0.12.5", features = ["json"] }

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0.207"
features = ["derive"]

[dependencies.tokio]
version = "1.39"
features = ["full"]

[dependencies.tokio-tungstenite]
version = "0.23.1"
features = ["connect", "native-tls"]

[dependencies.uuid]
version = "1.10"
features = ["v4"]

[dev-dependencies]
env_logger = "0.11.5"
